deploy: StasOskol/osk-ui-rt@e5eb72358d5114872cf30603c0da70d35cd46513

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-FUepzLNV.js"></script>
+    <script type="module" crossorigin src="/osk-ui-rt-docs/assets/iframe-M7qe5K4l.js"></script>
   </head>
 
   <body>
